# rooms

./: Cargo.toml  LICENSE  README.md
src/: bot.rs  config.rs  main.rs
src/bot/: commands.rs  core.rs  events.rs  util.rs
